--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "canvas": "^2.6.1",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.3.0",
     "next": "^9.3.4",
